tests/NormalTests/paczka1/small_fuzzy/72045961.err
Error in line 2: SbT S14 16,7
Error in line 8: A105 S0 42,0
Error in line 11: A105 S0 0,6
Error in line 9: A105 A395 331,6
